--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ httpx = "^0.28.1"
 loguru = "^0.7.3"
 pytest = "^8.4.1"
 coverage = "^7.10.1"
+pytest-cov = "^6.2.1"
+pytest-mock = "^3.14.1"
 
 
 [build-system]
